refactor(restaurant): 식당 상세 정보 반환 코드 개선